# Aura-Tokenizer

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Prompt.txt  README.md  WINDOWS_BUILD.md  codecov.yml  directory.txt  plan.txt
.github/workflows/: build.yml  ci.yml  codeql.yml  coverage.yml  msvc.yml  wasm.yml
Aura-Tokenizer/: .gitignore  CMakeLists.txt  build_wasm.bat  build_wasm.ps1  build_wasm.sh  setup_emscripten.bat
Aura-Tokenizer/Aura-Tokenizer/include/: auratokenizer_c_api.h
Aura-Tokenizer/Aura-Tokenizer/src/: placeholder.cpp
Aura-Tokenizer/Aura-Tokenizer/tests/: CMakeLists.txt  test_bpe_model.cpp  test_trainer.cpp  test_unicode.cpp  test_unigram_model.cpp  test_wordpiece_model.cpp
Aura-Tokenizer/include/: auratokenizer_c_api.h  bpe_tokenizer.h  bpe_trainer.h  byte_level_pre_tokenizer.h  char_level_tokenizer.h  double_array_trie.h  icu_integration.h  icu_utils.h  offsets.h  plugin_registry.h  post_processor.h  pre_tokenizer.h  serialization_utils.h  streaming.h  template_parser.h  token.h  tokenizer_advanced.h  tokenizer_base.h  tokenizer_base_wasm.h  tokenizer_config.h  tokenizer_core.h  tokenizer_encoder.h  tokenizer_exception.h  tokenizer_json_parser.h  tokenizer_model.h  tokenizer_python.h  tokenizer_trainer.h  tokenizer_types.h  tokenizer_wasm.h  trie.h  unicode_normalizer.h  unigram_tokenizer.h  unigram_trainer.h  utf8_utils.h  utils.h  vector_conversions.h  vocab.h  wordpiece_model.h  wordpiece_tokenizer.h
Aura-Tokenizer/src/: bpe_tokenizer.cpp  bpe_trainer.cpp  byte_level_pre_tokenizer.cpp  char_level_tokenizer.cpp  double_array_trie.cpp  icu_integration.cpp  icu_utils.cpp  offsets.cpp  plugin_registry.cpp  post_processor.cpp  pre_tokenizer.cpp  serialization_utils.cpp  streaming.cpp  template_parser.cpp  tokenizer_advanced.cpp  tokenizer_base.cpp  tokenizer_config.cpp  tokenizer_core.cpp  tokenizer_encoder.cpp  tokenizer_json_parser.cpp  tokenizer_model.cpp  tokenizer_python.cpp  tokenizer_types.cpp  tokenizer_wasm.cpp  trie.cpp  unicode_normalizer.cpp  unigram_tokenizer.cpp  unigram_trainer.cpp  utf8_utils.cpp  vector_conversions.cpp  vocab.cpp  wordpiece_model.cpp  wordpiece_tokenizer.cpp
Aura-Tokenizer/tests/: test_core.cpp  test_vector_conversions.cpp
Python/: Cargo.toml  README.md  pyproject.toml
Python/src/: lib.rs
Python/src/aura_tokenizer/: __init__.py
Python/tests/: test_tokenizer.py
Rust/aura-tokenizer/: Cargo.toml  README.md
Rust/aura-tokenizer-sys/: Cargo.toml  README.md  build.rs
Rust/aura-tokenizer-sys/src/: lib.rs
Rust/aura-tokenizer/src/: error.rs  hf_compat.rs  lib.rs  models.rs  tokenizer.rs  trainer.rs
Rust/aura-tokenizer/tests/: bpe.rs  trainer_and_decode.rs
docker/: Dockerfile.builder  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml
docs/: AuraTokenizer.md  advanced_features.ipynb  api_reference.md  examples.ipynb  examples_rust.md  integration_guide.md  usage.md
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_tokenizer.py
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/bridge/: bridge.cpp  bridge.h
rust/src/: ffi.rs  lib.rs  tokenizer.rs
rust/test_icu/: Cargo.toml  build.rs
rust/test_icu/src/: main.rs  test.cpp
rust/tests/: integration_test.rs
