[package]
name = "aura-tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "aura_tokenizer"
crate-type = ["rlib"]

[dependencies]
cxx = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
